Continue testing framework

--- a/TestEntrance/pom.xml
+++ b/TestEntrance/pom.xml
@@ -30,6 +30,11 @@
   		<artifactId>Resource</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>Common</groupId>
+  		<artifactId>Common</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
   
   <build>
