--- a/TestEntrance/pom.xml
+++ b/TestEntrance/pom.xml
@@ -35,6 +35,11 @@
   		<artifactId>Common</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency> 
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-log4j12</artifactId>
+  		<version>1.7.12</version>
+	</dependency>
   </dependencies>
   
   <build>
@@ -44,8 +49,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
