--- a/Converter/resources/converter.properties
+++ b/Converter/resources/converter.properties
@@ -1,3 +1,3 @@
-wheel=radius:10;material:STEEL
-engine=power:1000;producer:BENZ
-car=engine:{power:2000;producer:DAZ};wheel:{radius:20;material:IRON}
+wheel=radius:10;material:STEEL;
+engine=power:1000;producer:BENZ;
+car=engine:{power:1000;producer:BENZ;};wheel:{radius:10;material:STEEL;};
