--- a/JdbcDao/resources/jdbc.properties
+++ b/JdbcDao/resources/jdbc.properties
@@ -1,4 +1,14 @@
 jdbc.driverName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/sakila
+jdbc.url=jdbc:mysql://127.0.0.1:3306/eshop
 jdbc.userName=sampson
 jdbc.password=sampson
+jdbc.initScript=classpath:initDatabase.sql
+
+bean-class-tag=Class
+bean-class-register=E:\\SpringWorkspace\\JdbcDao\\resources\\bean-class-register.xml
+
+eshop-image=E:\\SpringWorkspace\\JdbcDao\\resources\\eshop.png
+employee-image=E:\\SpringWorkspace\\JdbcDao\\resources\\employee.jpg
+customer-image=E:\\SpringWorkspace\\JdbcDao\\resources\\customer.jpg
+
+eshop-image-output=E:\\SpringWorkspace\\JdbcDao\\resources\\eshop-output.png
