--- a/JdbcDao/resources/jdbc.properties
+++ b/JdbcDao/resources/jdbc.properties
@@ -12,3 +12,5 @@ employee-image=E:\\SpringWorkspace\\JdbcDao\\resources\\employee.jpg
 customer-image=E:\\SpringWorkspace\\JdbcDao\\resources\\customer.jpg
 
 eshop-image-output=E:\\SpringWorkspace\\JdbcDao\\resources\\eshop-output.png
+customer-image-output=E:\\SpringWorkspace\\JdbcDao\\resources\\customer-output.jpg
+employee-image-output=E:\\SpringWorkspace\\JdbcDao\\resources\\employee-output.jpg
