--- a/TestEntrance/pom.xml
+++ b/TestEntrance/pom.xml
@@ -77,9 +77,16 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		 -->
+		 <!-- 
 		<dependency>
 			<groupId>JdbcDao</groupId>
 			<artifactId>JdbcDao</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		 -->
+		<dependency>
+			<groupId>Hibernate-xml</groupId>
+			<artifactId>Hibernate-xml</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
