--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -6,7 +6,6 @@
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -39,39 +38,17 @@
 				<artifactId>logback-classic</artifactId>
 				<version>1.1.3</version>
 			</dependency>
-			<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> 
-				<version>1.7.13</version> </dependency> <dependency> <groupId>org.slf4j</groupId> 
-				<artifactId>slf4j-api</artifactId> <version>1.7.13</version> </dependency> 
-				<dependency> <groupId>log4j</groupId> <artifactId>log4j</artifactId> <version>1.2.17</version> 
-				</dependency> -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>1.3.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.karaf.demos.deployer.wrap</groupId>
+	    		<artifactId>osgi.commons-lang</artifactId>
+	    		<version>2.4.4</version>
+			</dependency>
 		</dependencies>
-	</dependencyManagement>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
-		</dependency>
-	</dependencies>
-
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
