--- a/SpringHibernate/pom.xml
+++ b/SpringHibernate/pom.xml
@@ -3,12 +3,6 @@
   <groupId>SpringHibernate</groupId>
   <artifactId>SpringHibernate</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
-  <parent>
-		<groupId>Common</groupId>
-		<artifactId>Common</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
 	
 	<dependencies>
 		<!-- Common dependency -->
@@ -26,26 +20,32 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
+			<version>4.2.1.RELEASE</version>
 		</dependency>
 		<!-- Database dependency -->
+		<!-- 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.38</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.0.7.Final</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
 			<version>5.0.7.Final</version>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
+			<version>4.2.1.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -62,16 +62,19 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
+			<version>1.7.13</version>
 		</dependency>
-		<!-- Time Utils -->
+		
+		<!-- Jackson @annotation -->
 		<dependency>
-			<groupId>org.apache.karaf.demos.deployer.wrap</groupId>
-    		<artifactId>osgi.commons-lang</artifactId>
-    		<version>2.4.4</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.7.3</version>
 		</dependency>
 	</dependencies>
   
