--- a/DozerConversion/resources/dozer.properties
+++ b/DozerConversion/resources/dozer.properties
@@ -1,1 +1,1 @@
-org.dozer.util.DozerProxyResolver=org.dozer.util.HibernateProxyResolver.class
+org.dozer.util.DozerProxyResolver=org.dozer.util.HibernateProxyResolver
