--- a/DozerConversion/pom.xml
+++ b/DozerConversion/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>SpringHibernate</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.7.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
