--- a/RestaurantManagement/pom.xml
+++ b/RestaurantManagement/pom.xml
@@ -101,6 +101,11 @@
 			<artifactId>DozerConversion</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring4</artifactId>
+			<version>3.0.0.RELEASE</version>
+		</dependency>
   </dependencies>
   
   <build>
