--- a/RestaurantFramework/pom.xml
+++ b/RestaurantFramework/pom.xml
@@ -27,6 +27,16 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>3.6.9.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>6.0.45</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>4.2.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
